# celerp

./: .env.example  .env.production.example  .gitignore  26-0418-connectors-plan-v4-final.md  26-0418-connectors-rectification-plan.md  26-0418-website-rectification-v3.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  NOTICE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  website-rectification-plan.md
.github/workflows/: build.yml  ci.yml  publish.yml  release.yml
celerp/: __init__.py  alembic.ini  cli.py  config.py  db.py  main.py  middleware.py  session_gate.py  tax_regimes.py
celerp/ai/: batch.py  cleanup.py  commands.py  conversations.py  files.py  intent.py  llm.py  memory.py  models.py  page_count.py  quota.py  service.py  tools.py
celerp/compute/: aggregations.py  valuation.py
celerp/connectors/: __init__.py  base.py  daily_scheduler.py  http.py  lazada.py  outbound_queue.py  quickbooks.py  registry.py  shopee.py  shopify.py  sync_runner.py  upsert.py  webhooks.py  woocommerce.py  xero.py
celerp/events/: engine.py  schemas.py  types.py
celerp/gateway/: __init__.py  client.py  state.py
celerp/importers/: importer.py  schema.py
celerp/migrations/: README.md  env.py  script.py.mako
celerp/models/: __init__.py  accounting.py  ai.py  base.py  company.py  connector_config.py  import_batch.py  ledger.py  marketplace.py  notification.py  projections.py  share.py  sync_run.py
celerp/modules/: __init__.py  api.py  license.py  loader.py  references.py  registry.py  slots.py
celerp/notifications/: __init__.py  service.py  sse.py
celerp/projections/: __init__.py  engine.py
celerp/routers/: auth.py  companies.py  doctor.py  health.py  ledger.py  notifications.py  system.py
celerp/services/: attachments.py  auth.py  auto_je.py  backup.py  backup_export.py  backup_files.py  backup_import.py  backup_scheduler.py  demo.py  email.py  field_schema.py  fulfill.py  je_keys.py  pick.py  session_tracker.py  system_health.py
default_modules/: __init__.py
default_modules/celerp-accounting/: __init__.py
default_modules/celerp-admin/: __init__.py
default_modules/celerp-ai/: __init__.py
default_modules/celerp-backup/: __init__.py
default_modules/celerp-connectors/: __init__.py
default_modules/celerp-contacts/: __init__.py
default_modules/celerp-dashboard/: __init__.py
default_modules/celerp-docs/: __init__.py
electron/: README.md  main.js  package.json  pnpm-lock.yaml  preload.js
scripts/: apply_i18n.py  bump-version.sh  download-python.sh  extract_i18n.py  module_setup.py  pg_grant.py  publish_pypi.sh  seed_demo.py
tests/: __init__.py  _e2e_api_server.py  _e2e_ui_server.py  conftest.py  diagnose_prices.py  e2e_postgres_test.py  e2e_price_check.py  test_accounting_banking.py  test_accounting_import_idempotency.py  test_attachments.py  test_bootstrap_flow.py  test_cli.py  test_company_deactivate.py  test_company_settings.py  test_connectors.py  test_connectors_shopee_lazada.py  test_crm_restructure.py  test_demo_prices.py  test_docs_import_idempotency.py  test_email_service.py  test_fulfillment.py  test_fulfillment_module.py  test_i18n.py  test_import_history.py  test_import_reconciliation.py  test_import_upsert.py  test_importers.py  test_imports.py  test_labels.py  test_lists_import_idempotency.py  test_main.py  test_manufacturing_import_idempotency.py  test_password_reset.py  test_perishables.py  test_permissions.py  test_proactive_qa.py  test_prod_hardening.py  test_purchasing_fields.py  test_reconciliation_v2.py  test_regression.py  (+20 more)
ui/: LICENSE  __init__.py  api_client.py  app.py  config.py  i18n.py
(+389 files in other folders)
